--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 /.gitattributes   export-ignore
 /.gitignore       export-ignore
-/.scrutinizer     export-ignore
-/.travis          export-ignore
+/.scrutinizer.yml export-ignore
+/.travis.yml      export-ignore
 /build.xml        export-ignore
 /phpunit.xml      export-ignore
 /README.md        export-ignore
