Fixed unit tests.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
   "require-dev": {
     "phing/phing": "^2.0.0",
     "phpunit/phpunit": "^6.0.0",
+    "setbased/abc-request-core": "*",
     "setbased/php-stratum": "^0.9.62"
+
   },
   "autoload": {
     "psr-4": {
