--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
         <exec command="cat test/ddl/0300_abc_babel_word.sql          | mysql -v -u root test" passthru="true" checkreturn="true"/>
         <exec command="cat lib/ddl/0100_create_tables.sql            | mysql -v -u root test" passthru="true" checkreturn="true"/>
         <exec command="cat test/ddl/0310_abc_auth_login_response.sql | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="bin/stratum stratum test/etc/stratum.cfg" passthru="true" checkreturn="true"/>
+        <exec command="bin/stratum stratum test/etc/stratum.ini" passthru="true" checkreturn="true"/>
         <exec command="bin/phpunit" passthru="true" checkreturn="true"/>
     </target>
     <target name="build"/>
