--- a/test/etc/stratum.ini
+++ b/test/etc/stratum.ini
@@ -9,7 +9,7 @@ database = test
 
 [constants]
 columns = test/etc/columns.txt
-class   = SetBased\Abc\C
+class   = Plaisio\C
 
 [loader]
 sources       = lib/psql/**/*.psql
@@ -21,7 +21,7 @@ collate       = utf8_general_ci
 
 [wrapper]
 parent_class  = SetBased\Stratum\MySql\StaticDataLayer
-mangler_class = SetBased\Stratum\NameMangler\PsrNameMangler
-wrapper_class = \SetBased\Abc\Login\Test\TestDataLayer
+mangler_class = SetBased\Stratum\Middle\NameMangler\PsrNameMangler
+wrapper_class = \Plaisio\Login\Test\TestDataLayer
 wrapper_file  = test/TestDataLayer.php
 wrapper_type  = static
