--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.1.0",
-    "plaisio/kernel": "^1.0.0",
-    "plaisio/login-handler": "^1.0.0",
-    "plaisio/login-requirement": "^1.0.0"
+    "php": ">=7.3",
+    "plaisio/kernel": "^1.0",
+    "plaisio/login-handler": "^1.0",
+    "plaisio/login-requirement": "^1.0"
   },
   "require-dev": {
-    "phing/phing": "^2.0.0",
-    "phpunit/phpunit": "^7.0.0 || ^8.0.0",
+    "phing/phing": "^2.0",
+    "phpunit/phpunit": "^9.0",
     "plaisio/request-core": "^0.10.0",
-    "setbased/php-stratum": "^5.0.0",
-    "setbased/php-stratum-mysql": "^4.0.0"
+    "setbased/php-stratum": "^5.4",
+    "setbased/php-stratum-mysql": "^4.4"
 
   },
   "autoload": {
@@ -36,6 +36,7 @@
     ]
   },
   "config": {
-    "bin-dir": "bin/"
+    "bin-dir": "bin/",
+    "sort-packages": true
   }
 }
