--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,12 +1,11 @@
 build:
-    environment:
-        mysql: 5.7
+  environment:
+    mysql: 5.7
 
-    tests:
-        override:
-            -
-                command: './bin/phing unit'
-                coverage:
-                    file: 'test/coverage.xml'
-                    format: 'php-clover'
+  tests:
+    override:
+      - command: './bin/phing unit'
+        coverage:
+          file:   'test/coverage.xml'
+          format: 'php-clover'
 
