--- a/test/etc/stratum.ini
+++ b/test/etc/stratum.ini
@@ -20,8 +20,7 @@ character_set = utf8
 collate       = utf8_general_ci
 
 [wrapper]
-parent_class  = SetBased\Stratum\MySql\StaticDataLayer
+parent_class  = SetBased\Stratum\MySql\MySqlDataLayer
 mangler_class = SetBased\Stratum\Middle\NameMangler\PsrNameMangler
 wrapper_class = \Plaisio\Login\Test\TestDataLayer
 wrapper_file  = test/TestDataLayer.php
-wrapper_type  = static
