--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,6 +3,9 @@ build:
     mysql: 5.7
 
   tests:
+    before:
+      - export PLAISIO_CONFIG_DIR=test
+      - ./bin/phing kernel
     override:
       - command: './bin/phing unit'
         coverage:
