--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,17 @@
         <exec command="composer update" checkreturn="true" passthru="true"/>
     </target>
 
+    <target name="kernel">
+        <exec executable="bin/plaisio" checkreturn="true" passthru="true">
+            <arg value="--ansi"/>
+            <arg value="plaisio:kernel-data-layer-type"/>
+        </exec>
+        <exec executable="bin/plaisio" checkreturn="true" passthru="true">
+            <arg value="--ansi"/>
+            <arg value="plaisio:kernel-properties"/>
+        </exec>
+    </target>
+
     <!-- Runs all unit tests -->
     <target name="unit">
         <exec command="cat test/ddl/0010_create_database.sql         | mysql -v -u root"      passthru="true" checkreturn="true"/>
