--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,19 @@
   "license": "MIT",
   "require": {
     "php": ">=7.3",
-    "plaisio/kernel": "^2.0",
+    "plaisio/company-resolver": "^2.0",
+    "plaisio/kernel": "^3.0",
     "plaisio/login-handler": "^1.1",
-    "plaisio/login-requirement": "^1.1"
+    "plaisio/login-requirement": "^1.1",
+    "plaisio/session": "^3.0"
   },
   "require-dev": {
     "phing/phing": "^2.0",
     "phpunit/phpunit": "^9.0",
-    "plaisio/request-core": "^0.10.1",
+    "plaisio/console": "^2.0",
+    "plaisio/request-core": "^0.10.2",
     "setbased/php-stratum": "^6.0",
     "setbased/php-stratum-mysql": "^5.0"
-
   },
   "autoload": {
     "psr-4": {
