--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: php
 php:
-  - '7.3'
   - '7.4'
 
 sudo: true
 
 addons:
-  mariadb: 10.2
+  mariadb: '10.2'
 
 before_install:
   - mysql --version
