--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,11 @@
             <arg value="update"/>
         </exec>
         <phing phingfile="build.xml" target="kernel" haltonfailure="true"/>
+        <exec executable="composer" checkreturn="true" passthru="true">
+            <arg value="--ansi"/>
+            <arg value="outdated"/>
+            <arg value="--direct"/>
+        </exec>
     </target>
 
     <target name="kernel">
