Upgrade to PHP 8.1 and higher.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 /.idea/
 /.phpunit.result.cache
-/bin
+/bin/
 /composer.lock
+/custom.task.properties
+/custom.type.properties
 /test/TestDataLayer.php
 /test/coverage.xml
 /test/etc/columns.txt
 /test/etc/routines.json
 /test/report/
-/vendor
+/vendor/
