--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,28 @@
 <project name="PhpPlaisio" default="build" basedir=".">
-    <!-- Run composer update and executes various other updates -->
+    <!-- Update dependencies -->
     <target name="update">
         <exec executable="composer" checkreturn="true" passthru="true">
             <arg value="--ansi"/>
             <arg value="update"/>
         </exec>
+
         <phing phingfile="build.xml" target="kernel" haltonfailure="true"/>
+        <phing phingfile="build.xml" target="outdated" haltonfailure="true"/>
+    </target>
+
+    <!-- Install dependencies -->
+    <target name="install">
+        <exec executable="composer" checkreturn="true" passthru="true">
+            <arg value="--ansi"/>
+            <arg value="install"/>
+        </exec>
+
+        <phing phingfile="build.xml" target="kernel" haltonfailure="true"/>
+        <phing phingfile="build.xml" target="outdated" haltonfailure="true"/>
+    </target>
+
+    <!-- Show outdated dependencies -->
+    <target name="outdated">
         <exec executable="composer" checkreturn="true" passthru="true">
             <arg value="--ansi"/>
             <arg value="outdated"/>
@@ -26,16 +43,12 @@
 
     <!-- Runs all unit tests -->
     <target name="unit">
-        <exec command="cat test/ddl/0010_create_database.sql         | mysql -v -u root"      passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0020_create_user.sql             | mysql -v -u root"      passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0300_abc_auth_company.sql        | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0300_abc_auth_user.sql           | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0300_abc_auth_session.sql        | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0300_abc_babel_word.sql          | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="cat lib/ddl/0100_create_tables.sql            | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="cat test/ddl/0310_abc_auth_login_response.sql | mysql -v -u root test" passthru="true" checkreturn="true"/>
-        <exec command="bin/stratum stratum test/etc/stratum.ini" passthru="true" checkreturn="true"/>
-        <exec command="bin/phpunit" passthru="true" checkreturn="true"/>
+        <exec executable="bash" passthru="true" checkreturn="true">
+            <arg value="-e"/>
+            <arg value="-x"/>
+            <arg value="test/unit-test.sh"/>
+        </exec>
     </target>
+
     <target name="build"/>
 </project>
