--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.4",
-    "plaisio/company-resolver": "^2.0",
-    "plaisio/kernel": "^3.0",
-    "plaisio/login-handler": "^1.2",
-    "plaisio/login-requirement": "^1.1",
-    "plaisio/session": "^4.0"
+    "php": ">=8.1",
+    "plaisio/company-resolver": "^2.1.0",
+    "plaisio/kernel": "^3.2.1",
+    "plaisio/login-handler": "^1.3.0",
+    "plaisio/login-requirement": "^1.2.0",
+    "plaisio/session": "^5.0.0"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require-dev": {
-    "phing/phing": "^2.0",
-    "phpunit/phpunit": "^9.0",
-    "plaisio/console": "^2.0",
+    "phing/phing": "^3.0.0-RC4",
+    "phpunit/phpunit": "^9.6.3",
+    "plaisio/console-kernel": "^1.0.1",
     "plaisio/request-core": "^0.13.0",
-    "setbased/php-stratum": "^6.0",
-    "setbased/php-stratum-mysql": "^6.0"
+    "setbased/php-stratum": "^6.3.1",
+    "setbased/php-stratum-mysql": "^6.6.0"
   },
   "autoload": {
     "psr-4": {
@@ -38,6 +40,9 @@
   },
   "config": {
     "bin-dir": "bin/",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "phing/phing-composer-configurator": true
+    }
   }
 }
