--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,15 @@
     "plaisio/kernel": "^3.2.1",
     "plaisio/login-handler": "^1.3.0",
     "plaisio/login-requirement": "^1.2.0",
+    "plaisio/request": "^1.0.0",
     "plaisio/session": "^5.0.0",
-    "setbased/php-stratum-mysql": "^7.0.0"
+    "setbased/php-stratum-mysql": "^7.0.1"
   },
   "require-dev": {
     "phing/phing": "^3.0.0",
     "phpunit/phpunit": "^10.5.35",
     "plaisio/console-kernel": "^1.0.1",
-    "plaisio/request-core": "^0.13.0",
+    "plaisio/request-core": "^1.0.0",
     "setbased/php-stratum": "^6.3.1"
   },
   "autoload": {
